--- a/manifest.json
+++ b/manifest.json
@@ -2,32 +2,24 @@
     "format_version": 2,
     "header": {
         "description": "聊天栏输入r整理背包\n对着箱子输入c整理箱子\n输入r help或c help获取帮助信息\nr或c大小写的整理顺序相反\n####玩耍QQ群：1035728204\n作者:云梦梦梦子\n机构:云梦•云梦泽\n有事没事来吹水啊，mc群除了mc什么都聊哒\n群里人才很多，说话又好听，留英博士，留美学生，985保送，大烧零，孬loli正太少爷应有尽有，更有开服多年穷如狗的哈皮管理",
-        "name": "§2§lR键整理-聊天栏版",
+        "name": "§2§lR键整理-聊天栏版-1.19.30",
         "uuid": "9b800341-cf5f-bb2e-de3f-0a6d1d5323e1",
         "version": [0, 0, 2],
-        "min_engine_version": [ 1, 19, 0 ]
+        "min_engine_version": [ 1, 19, 30 ]
     },
     "modules": [
         {
             "description": "Plugin Module",
             "type": "script",
             "uuid": "10101e99-abb4-448d-b57f-71e9d986353c",
-            "version": [0, 0, 1],
+            "version": [1, 0, 0],
             "entry": "scripts/main/main.js"
         }
     ],
     "dependencies": [
         {
             "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
-            "version": [ 0, 1, 0 ]
-        },
-        {
-            "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
-            "version": [ 0, 1, 0 ]
-        }//,
-        //{
-         //   "uuid": "2BD50A27-AB5F-4F40-A596-3641627C635E",
-          //  "version": [ 0, 1, 0 ]
-        //}
+            "version": "1.0.0-beta"
+        }
     ]
 }
