--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
     "format_version": 2,
     "header": {
-        "description": "聊天栏输入r整理背包\n对着箱子输入c整理箱子\n输入r help或c help获取帮助信息\nr或c大小写的整理顺序相反\n####玩耍QQ群：1035728204\n作者:云梦梦梦子\n机构:云梦•云梦泽\n有事没事来吹水啊，mc群除了mc什么都聊哒\n群里人才很多，说话又好听，留英博士，留美学生，985保送，大烧零，孬loli正太少爷应有尽有，更有开服多年穷如狗的哈皮管理",
-        "name": "§2§lR键整理-聊天栏版-1.19.30",
+        "description": "聊天栏输入r整理背包\n-修复C在修复B的时候因为修改了A对1.19.30时佩戴代码所导致的致命问题\n对着箱子输入c整理箱子\n输入r help或c help获取帮助信息\nr或c大小写的整理顺序相反\n####玩耍QQ群：1035728204\n作者:云梦梦梦子\n机构:云梦•云梦泽\n有事没事来吹水啊，mc群除了mc什么都聊哒\n群里人才很多，说话又好听，留英博士，留美学生，985保送，大烧零，孬loli正太少爷应有尽有，更有开服多年穷如狗的哈皮管理",
+        "name": "§2§lInventory-Tweaks-1.19.40-R键整理-聊天栏版",
         "uuid": "9b800341-cf5f-bb2e-de3f-0a6d1d5323e1",
-        "version": [0, 1, 0],
-        "min_engine_version": [ 1, 19, 30 ]
+        "version": [0, 1, 1],
+        "min_engine_version": [ 1, 19, 40 ]
     },
     "modules": [
         {
             "description": "Plugin Module",
             "type": "script",
-            "uuid": "10101e99-abb4-448d-b57f-71e9d986353c",
-            "version": [1, 0, 0],
+            "uuid": "10101e99-abb4-448d-b57f-71e9d986353f",
+            "version": [1, 1, 0],
             "entry": "scripts/main/main.js"
         }
     ],
