--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,24 @@
     "format_version": 2,
     "header": {
         "description": "聊天栏输入r整理背包\n\n对着箱子输入c整理箱子\n输入r help或c help获取帮助信息\nr或c大小写的整理顺序相反\n####玩耍QQ群：122957051\n作者:云梦梦梦子\n机构:云梦•云梦泽\n有事没事来吹水啊，mc群除了mc什么都聊哒\n群里人才很多，说话又好听，留英博士，留美学生，985保送，大烧零，孬loli正太少爷应有尽有，更有开服多年穷如狗的哈皮管理",
-        "name": "§2§lInventory-Tweaks-1.19.(60 ~ 63)-R键整理-聊天栏版",
+        "name": "§2§lInventory-Tweaks-1.20.0-R键整理-聊天栏版",
         "uuid": "9b800341-cf5f-bb2e-de3f-0a6d1d5323e1",
-        "version": [0, 1, 4],
-        "min_engine_version": [ 1, 19, 60 ]
+        "version": [1, 20, 0],
+        "min_engine_version": [ 1, 20, 0 ]
     },
     "modules": [
         {
-            "description": "§e§lInventory-Tweaks-1.19.60-R键整理-聊天栏版",
+            "description": "§e§lInventory-Tweaks-1.20.0-R键整理-聊天栏版",
             "type": "script",
-            "uuid": "10101e99-abb4-4400-b501-71e9d9863004",
-            "version": [0, 1, 4],
+            "uuid": "10101e99-abb4-4400-b521-71e9d9863005",
+            "version": [1, 20, 0],
             "entry": "scripts/main/main.js"
         }
     ],
     "dependencies": [
         {
             "module_name": "@minecraft/server",
-            "version": "1.1.0-beta"
+            "version": "1.3.0-beta"
         }
     ]
 }
