--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@minecraft/server": "^1.3.0-beta.1.20.0-stable"
+    "@minecraft/server": "^1.6.0-beta.1.20.30-stable",
+    "archiver": "^6.0.1"
   }
 }
-
