--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "dependencies": [
         {
             "module_name": "@minecraft/server",
-            "version": "2.0.0-beta"
+            "version": "2.0.0-alpha"
         }
     ]
 }
